tools/parser/tests/60-semantics-unknown-component.sl
// error: unknown components used
use UnknownComponent1;
read UnknownComponent2;
output UnknownComponent3;
